--- a/index.html
+++ b/index.html
@@ -218,6 +218,15 @@
         <a href="https://nettoiecaresse.fr" class="portfolio-title-link"><h3>Siteweb E-commerce</h3></a>
         <p>Développement du siteweb Nettoie&Caresse dans son intégralité dont le but est la réservation de prestations de nettoyages sur Ajaccio et ses alentours</p>
       </div>
+
+      <div class="portfolio-item">
+        <img src="/img/IAfoot.png" alt="Football AI Assistant" class="portfolio-image">
+        <a href="https://github.com/patrickf2a/MIAGEPROJECTIA" class="portfolio-title-link">
+          <h3 data-fr="Assistant IA Football" data-en="Football AI Assistant">Assistant IA Football</h3>
+        </a>
+        <p>Assistant conversationnel spécialisé dans le football utilisant l'API OpenAI (GPT-3.5, DALL-E 3) avec des fonctionnalités de génération d'images, synthèse vocale et embeddings pour une base de connaissances enrichie. Développé avec Node.js et MongoDB. </p>
+      </div>
+
     </div>
   </section>
 
